# Maxillaria

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  priors.h  unit_gauss.c
include/: maxillaria.h
src/: CMakeLists.txt  Makefile  Makefile.clang.linux-g10  Makefile.gcc.linux-g10  Makefile.suncc.linux-g10  explore.c  explore.h  live_point.c  live_point.h  maxillaria.c  maxillaria.c.bak  mt19937.c  nested.h  nested_diagnostic.c  nested_diagnostic.h  nested_sampler.c  nested_sampler.h  post_equal_weights.c  post_equal_weights.h  post_stats.c  post_stats.h  priors.c  utils.c  utils.h
